Actions
Bug #12744
closedgfx_private: bitmap_cons_clear 8-bit mode is using wrong color
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Wrong data is provided for 8-bit mode.
Testing done: set framebuffer to 8-bit depth, log in on console, verify colors after ^L (clear screen).
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 109b65249647da8f2f4306cd9b3d2800b05fd59b
commit 109b65249647da8f2f4306cd9b3d2800b05fd59b Author: Toomas Soome <tsoome@me.com> Date: 2020-05-18T17:46:53.000Z 12744 gfx_private: bitmap_cons_clear 8-bit mode is using wrong color Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions